--- a/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
+++ b/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
@@ -76,7 +76,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Files\StateCensusData %281%29.csv" />
+    <None Include="Files\StateCensusData.csv" />
     <None Include="Files\StateCode %281%29.csv" />
+    <None Include="Files\StateCode.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
