--- a/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
+++ b/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
@@ -77,6 +77,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Files\StateCensusData %281%29.csv" />
+    <None Include="Files\StateCensusData - Copy %282%29.json" />
+    <None Include="Files\StateCensusData - Copy.csv" />
     <None Include="Files\StateCensusData.csv" />
     <None Include="Files\StateCode %281%29.csv" />
     <None Include="Files\StateCode.csv" />
