--- a/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
+++ b/IndianStateCensusAnalyserProject/IndianStateCensusAnalyserProject.csproj
@@ -86,7 +86,7 @@
     <None Include="Files\StateCode %281%29.csv" />
     <None Include="Files\StateCode.csv" />
     <None Include="Files\StateCensusData.csv" />
-    <None Include="Files\StateCode.csv" />
+    <Content Include="Files\StateCode.txt" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
